--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.16.4",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "3.4.15",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^2.0.0-beta.1",
+    "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.11.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "@types/node": "^20.5.9",
-    "@quasar/app-vite": "^2.0.0-beta.1",
-    "autoprefixer": "^10.4.2",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "3.2.5",
     "typescript": "^5.2.2"
   },
   "engines": {
