--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "swagger-typescript-api": "^13.0.3",
     "vue": "3.4.15",
     "vue-router": "^4.0.12"
   },
