--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.6.7",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "swagger-typescript-api": "^13.0.3",
