--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "swagger-typescript-api": "^13.0.3",
