--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:8080/api
+VITE_API_URL=http://localhost:8080
 VITE_AUTH_CLIENT_ID=2
 VITE_AUTH_CLIENT_SECRET=AhVwXQakTJIOaGysyB8INfCSvBgPxn3utt3FEJ2B
